--- a/dbx_raw_ingest/src/sample_notebook.ipynb
+++ b/dbx_raw_ingest/src/sample_notebook.ipynb
@@ -58,7 +58,7 @@
     "import sys\n",
     "\n",
     "sys.path.append(\"../src\")\n",
-    "from dbx_raw_ingest import taxis\n",
+    "from raw_ingest import taxis\n",
     "\n",
     "taxis.find_all_taxis().show(10)"
    ]
